# ariles

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .travis.yml.disable  000__basic__interface_8h.html  000__basic__interface_8h_source.html  001__constructor__interface_8h.html  001__constructor__interface_8h_source.html  002__comparison_8h.html  002__comparison_8h_source.html  003__comparison__vector_8h.html  003__comparison__vector_8h_source.html  004__comparison__equivalence_8h.html  004__comparison__equivalence_8h_source.html  005__comparison__base_8h.html  005__comparison__base_8h_source.html  006__dummy_8h.html  006__dummy_8h_source.html  007__strictness_8h.html  007__strictness_8h_source.html  008__read__write_8h.html  008__read__write_8h_source.html  009__read_8h.html  009__read_8h_source.html  010__write__octave_8h.html  010__write__octave_8h_source.html  011__check_8h.html  011__check_8h_source.html  012__basic__interface__add__filename_8h.html  012__basic__interface__add__filename_8h_source.html  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  DEMO.html  DEMOv1.html  DEMOv2.html  GNUmakefile  LICENSE.html  (+930 more)
ariles/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md
ariles/cmake/: README  ariles.pc.in  arilesConfig.cmake.in  ariles_define_regression_test.cmake  ariles_define_test.cmake  ariles_install_component.cmake  ariles_parse_test_dependencies.cmake  cmakeut_add_external_git_project.cmake  cmakeut_compiler_flags.cmake  options_cpp11_on_noros_bionic.cmake  options_cpp11_on_noros_focal.cmake  options_cpp11_on_noros_xenial.cmake  options_deb_packages_bionic.cmake  options_deb_packages_focal.cmake  options_deb_packages_xenial.cmake  options_default.cmake  pkg_debian.cmake  toolchain_gcc9.cmake
ariles/cpput/: CMakeLists.txt
ariles/doc/: Doxyfile  advanced_features.md  migration_1to2.md
ariles/qa/: scspell.dict
ariles/tests/: CMakeLists.txt  all_enabled_bridges.h  demo.cpp  demo_api_v2.cpp  instantiate.h  regression_test_001.cpp  regression_test_002.cpp  regression_test_003.cpp  regression_test_004.cpp  regression_test_005.cpp  regression_test_010.json  regression_test_012.cpp  regression_test_014.cpp  regression_test_015.cpp  regression_test_018.cpp  regression_test_200.cpp  regression_test_201.cpp  regression_test_205.cpp  regression_test_210.cpp  regression_test_214.cpp  regression_test_218.cpp  regression_test_219.cpp  regression_test_220.cpp  regression_test_223_string.json  testlib1_api_v2.cpp  utility.h
ariles2_array_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_core_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_core_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_graphviz_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_namevalue_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_octave_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_pugixml_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_rapidjson_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_rosparam_catkin/: CHANGELOG.rst  CMakeLists.txt  package.xml
ariles2_rosparam_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
bridges/jsonnet/: CMakeLists.txt
bridges/msgpack/: CMakeLists.txt
bridges/octave/: CMakeLists.txt
bridges/rapidjson/: CMakeLists.txt
bridges/ros/: CMakeLists.txt
bridges/yaml/: CMakeLists.txt
bridges/yaml_cpp/: CMakeLists.txt
bridges/yaml_cpp03/: CMakeLists.txt
core/: CHANGELOG.rst  CMakeLists.txt  package.xml
core/cmake/: config.cmake.in
demo/: CMakeLists.txt  demo.cpp  package.xml  package.xml.disable
extra_visitors/jsonnet/: CMakeLists.txt
extra_visitors/octave/: CMakeLists.txt
extra_visitors/rapidjson/: CMakeLists.txt
extra_visitors/rosparam/: CMakeLists.txt
tests/: CMakeLists.txt  all_enabled_bridges.h  all_enabled_visitors.h  demo.cpp  demo_api_v2.cpp  fixture_000_basic_interface.h  fixture_001_constructor_interface.h  fixture_002_comparison.h  fixture_003_comparison_vector.h  fixture_004_comparison_equivalence.h  fixture_005_comparison_base.h  fixture_007_basic_interface_ros.h  fixture_base_default.h  fixture_base_ros.h  instantiate.h  regression_test_000.cpp  regression_test_001.cpp  regression_test_002.cpp  regression_test_003.cpp  regression_test_004.cpp  regression_test_005.cpp  regression_test_006.cpp  regression_test_007.cpp  regression_test_007.yaml  regression_test_008.cpp  regression_test_009.cpp  regression_test_010.cpp  regression_test_010.json  regression_test_011.cpp  regression_test_012.cpp  regression_test_013.cpp  regression_test_014.cpp  regression_test_015.cpp  regression_test_016.cpp  regression_test_017.cpp  regression_test_018.cpp  regression_test_019.cpp  regression_test_021.cpp  regression_test_022.cpp  regression_test_023.cpp  (+25 more)
tests/api_v1/: CMakeLists.txt  demo_api_v1.cpp  instantiate.h  regression_test_000.cpp  regression_test_001.cpp  regression_test_002.cpp  regression_test_003.cpp  regression_test_004.cpp  regression_test_005.cpp  regression_test_009.cpp  regression_test_010.cpp  regression_test_011.cpp  regression_test_012.cpp  regression_test_013.cpp  regression_test_014.cpp  regression_test_015.cpp  regression_test_016.cpp  regression_test_017.cpp  regression_test_018.cpp  regression_test_019.cpp  regression_test_020.cpp  regression_test_021.cpp  regression_test_022.cpp  regression_test_023.cpp  regression_test_024.cpp  testlib1.cpp  testlib2.cpp  utility.h
tests/api_v2/: CMakeLists.txt  all_enabled_adapters.h  all_enabled_visitors.h  demo_api_v2.cpp  instantiate.h  regression_test_200.cpp  regression_test_201.cpp  regression_test_202.cpp  regression_test_203.cpp  regression_test_204.cpp  regression_test_205.cpp  regression_test_209.cpp  regression_test_210.cpp  regression_test_211.cpp  regression_test_212.cpp  regression_test_213.cpp  regression_test_214.cpp  regression_test_215.cpp  regression_test_215.xml  regression_test_216.cpp  regression_test_217.cpp  regression_test_218.cpp  regression_test_219.cpp  regression_test_220.cpp  regression_test_221.cpp  (+18 more)
(+2485 files in other folders)
