<?xml version="1.0"?>
<package format="2">
  <name>ariles_ros</name>
  <version>1.1.1</version>
  <description>Catkin package Ariles serialization/configuration library</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
