<?xml version="1.0"?>
<package format="2">
  <name>cmakeut</name>
  <version>1.0.2</version>
  <description>cmake utilities</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://github.com/asherikov/cmakeut</url>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
